@@ -1,5 +1,12 @@
 2017-01-23  Gerrit Holl  <g.holl@reading.ac.uk>
 
+	* typhon/math/stats.py(corrcoef):
+
+	- Calculate corrcoef with p-values.  Taken from StackOverflow,
+	attribution in source code.
+
+2017-01-23  Gerrit Holl  <g.holl@reading.ac.uk>
+
 	* typhon/physics/metrology.py:
 	
 	- We don't want uncertainties expressed in the free symbols if some
